Update primary color and fix formatting in _variables.scss

--- a/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/lms/static/sass/partials/lms/theme/_variables.scss
@@ -1,10 +1,10 @@
-$primary: #E75E28;
+$primary: #2be7ed;
 $primary-light: #F2F7F8;
 
 // Theme fonts
 $font-family-title: 'Inter', sans-serif;
 $serif: Crimson;
-$f-sans-serif: Crimson, 'Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
+$f-sans-serif: Crimson, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 // Initialize the Open edX Bootstrap theme
 @import 'edx-bootstrap/sass/open-edx/theme';
