github actions test - 1

--- a/lms/templates/index_overlay.html
+++ b/lms/templates/index_overlay.html
@@ -1,2 +1,2 @@
 <h1>${settings.PLATFORM_NAME}</h1>
-<p>Your one-stop destination for online education</p>
+<p>Your one-stop destination for online education!</p>
