footer links updated

--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -35,23 +35,23 @@
       <ol>
           
           <li>
-            <a href="/about">About Us</a>
+            <a href="https://lexconx.com/about" target="_blank" rel="noopener">About Us</a>
           </li>
           
           <li>
             <a href="/blog">Blog</a>
           </li>
           
-          <li>
+          <!-- <li>
             <a href="/donate">Donate</a>
+          </li> -->
+          
+          <li>
+            <a href="https://dev2.lexconx.com/tos" target="_blank" rel="noopener">Terms of Service</a>
           </li>
           
           <li>
-            <a href="/tos">Terms of Service</a>
-          </li>
-          
-          <li>
-            <a href="/privacy">Privacy Policy</a>
+            <a href="https://dev2.lexconx.com/privacy" target="_blank" rel="noopener">Privacy Policy</a>
           </li>
           
           <li>
@@ -110,23 +110,23 @@
         <ol>
             
             <li>
-              <a href="/about">About Us</a>
+              <a href="https://lexconx.com/about" target="_blank" rel="noopener">About Us</a>
             </li>
             
             <li>
               <a href="/blog">Blog</a>
             </li>
             
-            <li>
+            <!-- <li>
               <a href="/donate">Donate</a>
+            </li> -->
+            
+            <li>
+              <a href="https://dev2.lexconx.com/tos" target="_blank" rel="noopener">Terms of Service</a>
             </li>
             
             <li>
-              <a href="/tos">Terms of Service</a>
-            </li>
-            
-            <li>
-              <a href="/privacy">Privacy Policy</a>
+              <a href="https://dev2.lexconx.com/privacy" target="_blank" rel="noopener">Privacy Policy</a>
             </li>
             
             <li>
